refactored reservation; added exception handling
