# src/main/java/com/sample/zoorestservice/model/VisitReservation.java
@@ -1,22 +1,0 @@
-package com.sample.zoorestservice.model;
-
-import lombok.AllArgsConstructor;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
-
-import java.time.LocalDate;
-
-@Document
-@AllArgsConstructor
-public class VisitReservation {
-
-    @Id
-    private String id;
-
-    private String fullName;
-
-    private int numberOfSeats;
-
-    private LocalDate dateTime;
-
-}
